<package>
  <name>dumbo_hardware_interface</name>
  <version>0.0.1</version>
  <description>
    Dumbo hardware interface for ros_control
  </description>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>
  <license>BSD</license>

  <url>http://wiki.ros.org/dumbo_hardware_interface</url>

  <author email="fevb@kth.se">Francisco Vina</author>
  <maintainer email="fevb@kth.se">Francisco Vina</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>dumbo_powercube_chain</build_depend>
  <build_depend>dumbo_force_torque_sensor</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>dumbo_powercube_chain</run_depend>
  <run_depend>dumbo_force_torque_sensor</run_depend>



</package>